--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/velocerentalsdb
 spring.datasource.username=root
 spring.datasource.password=
